missing cool mad libs function

--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
-		
 		<div class="content">
 			<h1>
 				In a Parallel Universe...
 			</h1>
 			<div id="cases">
-				<p>You are a billionaire.</p>
+				<!--<p>You are a billionaire.</p>
 				<p>You have red hair.</p>
 				<p>You are a homeless person.</p>
 				<p>You are nothing.</p>
@@ -30,7 +29,7 @@
 				<p>You have a Lamborghini.</p>
 				<p>You have a hoverboard.</p>
 				<p>You are The President of the United States.</p>
-				<p class="active">You are an alien.</p>
+				<p class="active">You are an alien.</p>-->
 			</div>
 			<footer>
 				<a href="http://github.com/nabilfreeman/parallel-universe">View source code</a>
