--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
 	<head>
+		<meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui"/>
+
 		<title>
 			In a Parallel Universe...
 		</title>
@@ -14,10 +17,16 @@
 		<link rel="stylesheet" href="css/main.css">
 	</head>
 	<body>
+
 		<div class="content">
 			<h1>
 				In a Parallel Universe...
 			</h1>
+
+			<div class="mitosis">
+				
+			</div>
+
 			<div id="cases">
 				<!--<p>You are a billionaire.</p>
 				<p>You have red hair.</p>
@@ -31,9 +40,7 @@
 				<p>You are The President of the United States.</p>
 				<p class="active">You are an alien.</p>-->
 			</div>
-			<footer>
-				<a href="http://github.com/nabilfreeman/parallel-universe">View source code</a>
-			</footer>
+
 		</div>
 
 		<script src="js/main.js"></script>
