--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 			</h1>
 
 			<div class="mitosis">
-				
+				<div class="universes">
+					<div>
+						<img src="img/space.jpg">
+					</div>
+				</div>
 			</div>
 
 			<div id="cases">
