added an open graph image for sharing, and changed the text a little bit

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 		<meta property="og:title" content="In a Parallel Universe...">
 		<meta property="og:site_name" content="Parallel Universe">
-		<meta property="og:url" content="http://iloveyou.instafork.com">
+		<meta property="og:url" content="http://parallel-universe.instafork.com">
+		<meta property="og:image" content="http://parallel-universe.instafork.com/img/screenshot.jpg">
 		<meta property="og:description" content="The idea of parallel universes can be crazy to think about. This might help... Or blow your mind.">
 		<!-- <meta property="og:image" content="http://iloveyou.instafork.com/img/iloveyou.jpg"> -->
 		<meta property="og:type" content="website">
